Angle and Factor limits in SimpleDeform modifier do not always working. #46136

Closed
opened 2015-09-17 07:04:19 +02:00 by Grigoriy Titaev · 10 comments

System Information
Windows 7 x32

Blender Version
Broken: 2.75a c27589e, blender-2.76-testbuild2
Worked: (optional)

Short description of error
Angle and Factor limits in SimpleDeform modifier do not working when I enter the value using the keyboard.

And limits of +/- 180 degrees is very small. For example you cannot create a circle or pipe from plane.
Please increase the limit to +/- 360 degrees. Or it may be better to remove any limits for this field.

Exact steps for others to reproduce the error
in SimpleDeform modifier in twist and bend modes.

I use the mouse to change the "angle". +/- 180 degrees limits is working.

Then I changed angle to 181 degrees by using the keyboard, limits are not working.
I changed the value of the mouse. Now limits from -180 to 286.479.

Then I changed angle to 290 degrees by using the keyboard. Now limits from -180 to 572.958.
Then I changed angle to 580 degrees by using the keyboard. Now limits from -180 to 1145.916.

In Taper and Stretch modes some problem with "Factor" field.

**System Information** Windows 7 x32 **Blender Version** Broken: 2.75a c27589e, blender-2.76-testbuild2 Worked: (optional) **Short description of error** Angle and Factor limits in SimpleDeform modifier do not working when I enter the value using the keyboard. And limits of +/- 180 degrees is very small. For example you cannot create a circle or pipe from plane. Please increase the limit to +/- 360 degrees. Or it may be better to remove any limits for this field. **Exact steps for others to reproduce the error** in SimpleDeform modifier in twist and bend modes. I use the mouse to change the "angle". +/- 180 degrees limits is working. Then I changed angle to 181 degrees by using the keyboard, limits are not working. I changed the value of the mouse. Now limits from -180 to 286.479. Then I changed angle to 290 degrees by using the keyboard. Now limits from -180 to 572.958. Then I changed angle to 580 degrees by using the keyboard. Now limits from -180 to 1145.916. In Taper and Stretch modes some problem with "Factor" field.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @gtitaev

Added subscriber: @gtitaev

This comment was removed by @gtitaev

*This comment was removed by @gtitaev*
Сommits 2679eaa712, blender/blender-staging@6537771410

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2015-09-17 09:06:04 +02:00

Thanks for the report, but no bug here. This is not specific to said settings, all numbuttons with soft range != hard range will behave that way - that is, adapt their soft range when current value is outside of the original [softmin, softmax] limits (the odd values for degrees are due to the fact the up-rounding is done on raw values, i.e. radians (572.958° = 10 rad, etc.)).

Thanks for the report, but no bug here. This is not specific to said settings, **all** numbuttons with soft range != hard range will behave that way - that is, adapt their soft range when current value is outside of the original [softmin, softmax] limits (the odd values for degrees are due to the fact the up-rounding is done on raw values, i.e. radians (572.958° = 10 rad, etc.)).

Then can you increase the limit from +/- 180 to +/- 360 degrees?
Because to make a circle you need to use the keyboard. This can not be done with the mouse. It is not always convenient.

Then can you increase the limit from +/- 180 to +/- 360 degrees? Because to make a circle you need to use the keyboard. This can not be done with the mouse. It is not always convenient.

Done as 276732ee62.

Done as 276732ee62.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46136
No description provided.