Address request from T46136: make softrange for 'simple deform' angle from -360 to 360 degrees...

This should be safe enough for final 2.76, sould we make other RC.